--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.0",
+    "auth0-deploy-cli": "^7.19.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
